# deltavar

./: .gitignore  README.md  main.py  pyproject.toml
deltavar/: __init__.py  core.py  sigma.py  utils.py
docs/: conf.py  index.rst
examples/: simple_mlp_example.py
tests/: test_core.py  test_sigma.py
