[project]
name = "deltavar"
version = "0.1.1"
description = "Tools to calculate the Delta Variance for epistemic uncertainty estimation in PyTorch, using torch.func."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.3.5",
    "torch>=2.3.1",
]

[tool.rye.dev-dependencies]
sphinx = "*"
furo = "*"
sphinx-autodoc-typehints = "*"
